--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "lucide-react": "^0.525.0",
     "nanoid": "^5.1.5",
     "next": "15.3.4",
+    "next-auth": "^4.24.11",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-player": "^2.16.0",
     "socket.io-client": "^4.8.1",
     "sonner": "^2.0.5",
